spacing fixes for user show page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-card {
+
+  h4 {
+    margin: 2rem 2rem 1rem 2rem;
+  }
+
+  ul, p {
+    margin: 1rem 2rem;
+  }
+}
